--- a/day17/7.Carousels.html
+++ b/day17/7.Carousels.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style type="text/css">
+        :root{
+            --winWidth : 540px;
+            --winHeight : 360px;
+        }
+
         *{
+            box-sizing: border-box;
             margin: 0;
             padding: 0;
         }
@@ -13,43 +19,88 @@
             border: 1px solid red;
             background-color: greenyellow;
             position: relative;
-            width: 520px;
-            height: 333px;
+            width: var(--winWidth);
+            height: var(--winHeight);
             margin: 50px auto;
-            padding: 10px 0;
             overflow: hidden;
         }
 
-        #imgList{
+        #imgList {
+            display: flex;
+            position: relative;
+            /*flex-direction: row;*/
+            border: 1px solid purple;
             list-style: none;
-            position: absolute;
         }
 
-        #imgList li{
-            float: left;
-            margin: 0 10px;
+        #imgList li {
+            border: 1px solid darkgreen;
+            position: relative;
+            display: block;
+            min-width: var(--winWidth);
+            height: var(--winHeight);
         }
+
+        #imgList img {
+            display: block;
+            margin: 10px auto;
+        }
+
         #navDiv{
-            bottom: 10px;
+            border: 1px solid blue;
+            display: flex;
+            flex-direction: row;
             position: absolute;
+            bottom: 0;
+            left: 0;
+
         }
 
         #navDiv a{
-            float: left;
+            border: 1px solid deeppink;
+            background-color: rgba(255, 0, 0, 0.46);
+            display: block;
             width: 15px;
             height: 15px;
-            background-color: red;
-            margin: 0 5px;
-            opacity: 0.5;
-            filter: alpha(opacity=50);
+            margin: 5px;
         }
 
         #navDiv a:hover{
-            background-color: black;
+            background-color: rgba(255, 0, 0, 0.9);
+
         }
 
     </style>
-    <script ></script>
+    <script type="text/javascript">
+        window.onload = function (){
+            const winWidth = 540;
+            const imgNumber = 5;
+            let imgListContent = document.querySelector("#imgList");
+            let allA = document.getElementsByTagName("a");
+
+            function MoveImg(curr, target, speed){
+                if (curr < target) speed = -speed;
+
+                let timer = setInterval(function (){
+                    imgListContent.style.left = (imgListContent.offsetLeft + speed) + "px" ;
+                    if ( imgListContent.offsetLeft == -(target * winWidth)){
+                        clearInterval(timer);
+                    }
+                }, 30);
+            }
+
+            // MoveImg(0,2,10);
+
+
+
+
+
+
+
+
+        }
+
+    </script>
 </head>
 <body>
 <div id="outer">
@@ -59,10 +110,8 @@
         <li><img src="./imgSameSize/3.jpg" alt=""></li>
         <li><img src="./imgSameSize/4.jpg" alt=""></li>
         <li><img src="./imgSameSize/5.jpg" alt=""></li>
-        <li><img src="./imgSameSize/6.jpg" alt=""></li>
     </ul>
     <div id="navDiv">
-        <a href="javascript:;"></a>
         <a href="javascript:;"></a>
         <a href="javascript:;"></a>
         <a href="javascript:;"></a>
